--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
   </head>
   <body>
     <main id="main">
+        <a href="#" onclick="loadIssues();">Load GitHub Issue</a>
     </main>
+    <script id="issue-template" type="text/x-handlebars-template">
+      {{#each this}}
+      <article>
+        <header><h3>Issue #{{this.number}} ({{this.state}})</h3></header>
+        <p>{{comment_body}}</p>
+        {{#if this.comments_count}}
+        <p>{{this.comments_count}} Comments</p>
+        {{else}}
+        <p>No Comments Yet</p>
+        {{/if}}
+        <footer><a href="{{url}}">created {{this.created_at}}</a></footer>
+      </article>
+      {{/each}}
+    </script>    
     <script src="handlebars.js"></script>
     <script src="issues.js"></script>
     <script src="index.js"></script>
