--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script id="issue-template" type="text/x-handlebars-template">
       {{#each this}}
       <article>
+        debugger
         <header><h3>Issue #{{number}} ({{state}})</h3></header>
         <p>{{comment_body}}</p>
         {{#if comments_count}}
