--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
   </head>
   <body>
     <main id="main">
+
+      <a href="#" onclick="loadIssues();">Load GitHub Issue</a>
+      <script id="issue-template" type="text/x-handlebars-template">
+  {{#each this}}
+        <article>
+          <header><h3>Issue #{{number}} ({{state}})</h3></header>
+          <p>{{comment_body}}</p>
+      {{#if comments_count}}
+          <p>{{comments_count}} Comments</p>
+      {{else}}
+          <p> no Comments Yet</p>
+      {{/if}}
+          <footer><a href="{{url}}">created {{created}}</a></footer>
+        </article>
+  {{/each}}
+      </script>
+
     </main>
     <script src="handlebars.js"></script>
     <script src="issues.js"></script>
