--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
   </head>
   <body>
     <main id="main">
+      <a href="#" onClick="loadIssue();">Load GitHub Issue</a>
     </main>
+    
+    <script id="issueTemplate" type="text/x-handlebars-template">
+       <article>
+        <header><h3>Issue #{{number}}({{state}})</h3></header>
+        <p>{{body}}</p>
+        <footer><a href="{{url}}">created{{created_at}}</a></footer>
+       </article>
+    </script>
+    
     <script src="handlebars.js"></script>
     <script src="issues.js"></script>
     <script src="index.js"></script>
