--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,8 +7,14 @@
   <body>
     <main id="main">
     </main>
+    <script id="issue-template" type="text/x-handlebars-template">
+      <article>
+        <header><h3>Issue #{{number}} ({{state}})</h3></header>
+        <p>{{body}}</p>
+      <footer><a href="{{url}}">created {{created_at}}</a></footer>
+      </article>
+    </script>
     <script src="handlebars.js"></script>
     <script src="issues.js"></script>
     <script src="index.js"></script>
   </body>
-</html>
