--- a/index.html
+++ b/index.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>JavaScript Handlebars Templates</title>
+    <title>Mocha</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="node_modules/mocha/mocha.css" />
   </head>
   <body>
     <main id="main">
+      <form id="recipe-form" onsubmit="createRecipe();return false;">
+        Recipe Name: <input id="name" type="text"><br>
+        Description: <input id="description" type="text"><br>
+        Ingredients:<br>
+        <input name="ingredients" type="text"><br>
+        <input name="ingredients" type="text"><br>
+        <input name="ingredients" type="text"><br>
+        <input name="ingredients" type="text"><br>
+        <input name="ingredients" type="text"><br>
+        <input type="submit" name="" value="Submit">
+      </form>
     </main>
-    <script src="handlebars.js"></script>
-    <script src="issues.js"></script>
+    <script src="node_modules/handlebars/dist/handlebars.min.js"></script>
     <script src="index.js"></script>
+    <!-- Open this file and call `mocha.run()` in console to run tests -->
+    <div id="mocha"></div>
+    <script src="node_modules/mocha/mocha.js"></script>
+    <script src="node_modules/expect/umd/expect.min.js"></script>
+    <script>mocha.setup('bdd');</script>
+    <script src="test/index-test.js"></script>
+
+    <!-- Recipe Form Template -->
+    <script id="recipe-form-template" type="text/x-handlebars-template">
+
+    </script>
+    <!-- Recipe Template -->
+    <script id="recipe-template" type="text/x-handlebars-template">
+      <h2>{{name}}</h2>
+      {{> recipeDetailsPartial }}
+      <a href="displayEditForm();">Edit Recipe</a>
+    </script>
+
+    <!-- Recipe Details Partial -->
+    <script id="recipe-details-partial" type="text/x-handlebars-template">
+      <h3>{{description}}</h3>
+      {{#each ingredients}}
+        <h4>{{displayIngredient this}}</h4>
+      {{/each}}
+    </script>
+
   </body>
+
 </html>
