--- a/index.html
+++ b/index.html
@@ -4,8 +4,37 @@
     <title>JavaScript Handlebars Templates</title>
   </head>
   <body>
+
     <main id="main">
+      <a href="#" onclick="loadIssues();">Load GitHub Issue</a>
     </main>
+<!-- just the EACH helper -->
+    <!-- <script id="issue-template" type="text/x-handlebars-template">
+      {{#each this}}
+      <article>
+        <header><h3>Issue #{{number}} ({{state}})</h3></header>
+        <p>{{body}}</p>
+        <footer><a href="{{url}}">created {{created_at}}</a></footer>
+      </article>
+      {{/each}}
+    </script> -->
+
+<!-- EACH AND IF helpers -->
+    <script id="issue-template" type="text/x-handlebars-template">
+      {{#each this}}
+      <article>
+        <header><h3>Issue #{{number}} ({{state}})</h3></header>
+        <p>{{comment_body}}</p>
+        {{#if comments_count}}
+        <p>{{comments_count}} Comments</p>
+        {{else}}
+        <p>No Comments Yet</p>
+        {{/if}}
+        <footer><a href="{{url}}">created {{created_at}}</a></footer>
+      </article>
+      {{/each}}
+    </script>
+
     <script src="handlebars.js"></script>
     <script src="issues.js"></script>
     <script src="index.js"></script>
