--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <main id="main">
-      <a href="#" onclick="loadIssue();">Load GitHub Issue</a>
-    </main>
-    <script id="issue-template" type="text/x-handlebars-template">
+  <a href="#" onclick="loadIssues();">Load GitHub Issue</a>
+</main>
+<script id="issue-template" type="text/x-handlebars-template">
   {{#each this}}
   <article>
     <header><h3>Issue #{{number}} ({{state}})</h3></header>
