--- a/index.html
+++ b/index.html
@@ -5,9 +5,49 @@
   </head>
   <body>
     <main id="main">
+        <a href="#" onclick="loadIssues();">Load GitHub Issue</a>
     </main>
     <script src="handlebars.js"></script>
     <script src="issues.js"></script>
     <script src="index.js"></script>
+
+    <!-- ** Load all issues from js file and use if helper ** -->
+      <!-- Note : Also replaced "body" with "comment_body" due to registerHelper -->
+    <script id="issue-template" type="text/x-handlebars-template">
+      {{#each this}}
+      <article>
+        <header><h3>Issue #{{number}} ({{state}})</h3></header>
+        <p>{{comment_body}}</p>
+        {{#if comments_count}}
+          <p>{{comments_count}} Comments</p>
+        {{else}}
+          <p>No Comments Yet</p>
+        {{/if}}
+        <footer><a href="{{url}}">created {{created_at}}</a></footer>
+      </article>
+      {{/each}}
+    </script>
+
+    <!-- ** Load all issues from js file ** -->
+    <!--<script id="issue-template" type="text/x-handlebars-template">-->
+    <!--  {{#each this}}-->
+    <!--  <article>-->
+    <!--    <header><h3>Issue #{{number}} ({{state}})</h3></header>-->
+    <!--    <p>{{body}}</p>-->
+    <!--    <footer><a href="{{url}}">created {{created_at}}</a></footer>-->
+    <!--  </article>-->
+    <!--  {{/each}}-->
+    <!--</script>-->
+
+
+    <!-- ** Load one Issue ** -->
+    <!--<script id="issue-template" type="text/x-handlebars-template">-->
+    <!--  <article>-->
+    <!--    <header><h3>Issue #{{number}} ({{state}})</h3></header>-->
+    <!--    <p>{{body}}</p>-->
+    <!--    <footer><a href="{{url}}">created {{created_at}}</a></footer>-->
+    <!--  </article>-->
+    <!--</script>-->
+
   </body>
 </html>
