--- a/index.html
+++ b/index.html
@@ -5,9 +5,41 @@
   </head>
   <body>
     <main id="main">
+  
+    <a href="#" onclick="loadIssues();">Load GitHub Issue</a>
+
     </main>
+    <!-- first template  -->
+   <script id="issue-template" type="text/x-handlebars-template">
+        {{#each this}}
+            <article>
+                  <header><h3>Issue #{{number}} ({{state}})</h3></header>
+                      <p>{{comment_body}}</p>
+                         {{#if comments_count}}
+                              <p>{{comments_count}} Comments</p>
+                          {{else}}
+                               <p>No Comments Yet</p>
+                           {{/if}}
+                    <footer><a href="{{url}}">created {{created_at}}</a></footer>
+             </article>
+           {{/each}}
+    </script>
+<!-- end first template -->
+
     <script src="handlebars.js"></script>
     <script src="issues.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
+
+<!--  code to load one issue, changed to load multples 
+<script id="issue-template" type="text/x-handlebars-template">
+      
+      <article>
+        <header><h3>Issue #{{number}} ({{state}})</h3></header>
+
+        <p>{{body}}</p>
+
+        <footer><a href="{{url}}">created {{created_at}}</a></footer>
+      </article>
+    </script> -->
