--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>JavaScript Handlebars Templates</title>
-  </head>
-  <body>
-    <main id="main">
-    </main>
-    <script src="handlebars.js"></script>
-    <script src="issues.js"></script>
-    <script src="index.js"></script>
-  </body>
+
+<head>
+  <title>JavaScript Handlebars Templates</title>
+</head>
+
+<body>
+  <main id="main">
+    <a href="#" onclick="loadIssues();">Load GitHub Issue</a>
+  </main>
+  <script src="handlebars.js"></script>
+  <script id="issue-template" type="text/x-handlebars-template">
+    {{#each this}}  
+      <article>
+        <header><h3>Issue #{{number}} ({{state}})</h3></header>
+        <p>{{comment_body}}</p>
+        {{#if comments_count}}
+        <p>{{comments_count}} Comments</p>
+        {{else}}
+        <p>No Comments Yet</p>
+        {{/if}}
+        <footer><a href="{{url}}">created {{create_at}}</a></footer>
+      </article>
+    {{/each}}
+  </script>
+  <script src="issues.js"></script>
+  <script src="index.js"></script>
+</body>
+
 </html>
