--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <main id="main">
     </main>
     <script src="handlebars.js"></script>
+    <script id="issue-log" type="text/x-handlebars-template">
+      {{#each aIssues}}
+      <article> 
+          <h3>Issue # {{ id }} </h3>
+          <span> {{ state }} </span><span> {{ created_at }} </span>
+          <p>{{ body }} </p>
+          <a href={{ url }}>{{ url }}</a> 
+      </article>
+      {{/each }} 
+    </script>
     <script src="issues.js"></script>
     <script src="index.js"></script>
   </body>
