--- a/index.html
+++ b/index.html
@@ -5,7 +5,62 @@
   </head>
   <body>
     <main id="main">
-    </main>
+  <!--<a href="#" onclick="loadIssue();">Load GitHub Issue</a>-->
+  <a href="#" onclick="loadIssues();">Load GitHub Issue</a> <!--changed the function name from loadIssue to loadIssues-->
+
+</main>
+
+<!--<script id="issue-template" type="text/x-handlebars-template">
+  <article>
+    <header><h3>Issue #{{number}} ({{state}})</h3></header>
+    <p>{{body}}</p>
+    <footer><a href="{{url}}">created {{created_at}}</a></footer>
+  </article>
+</script> -->
+
+<!-- <script id="issue-template" type="text/x-handlebars-template">
+  {{#each this}} // this is set to whatever the context object is when we call our template function. "this is an array, apply template to each item"
+  <article>
+    <header><h3>Issue #{{number}} ({{state}})</h3></header>
+    <p>{{body}}</p>
+    <footer><a href="{{url}}">created {{created_at}}</a></footer>
+  </article>
+  {{/each}}
+  
+</script> -->
+
+
+<!-- <script id="issue-template" type="text/x-handlebars-template">
+  {{#each this}}
+  <article>
+    <header><h3>Issue #{{number}} ({{state}})</h3></header>
+    <p>{{body}}</p>
+    {{#if comments_count}}
+    <p>{{comments_count}} Comments</p>
+    {{else}}
+    <p>No Comments Yet</p>
+    {{/if}}
+    <footer><a href="{{url}}">created {{created_at}}</a></footer>
+  </article>
+  {{/each}}
+</script> -->
+
+<script id="issue-template" type="text/x-handlebars-template">
+  {{#each this}}
+  <article>
+    <header><h3>Issue #{{number}} ({{state}})</h3></header>
+    <p>{{comment_body}}</p>
+    {{#if comments_count}}
+    <p>{{comments_count}} Comments</p>
+    {{else}}
+    <p>No Comments Yet</p>
+    {{/if}}
+    <footer><a href="{{url}}">created {{created_at}}</a></footer>
+  </article>
+  {{/each}}
+</script>
+
+
     <script src="handlebars.js"></script>
     <script src="issues.js"></script>
     <script src="index.js"></script>
