--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     </main>
     <script id="issue-template" type="text/x-handlebars-template">
       {{#each this}}
+      //each is a block-level helper so start with # and end with / to open/close braces for JS
+      //each needs iterator therefore use of THIS is set to whatever context object is in when template
+      //function is called
+      //eg: 'THIS is an array, apply template to EACH item.'
       <article>
         <header><h3>Issue #{{number}} ({{state}})</h3></header>
         <p>{{comment_body}}</p>
