--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <main id="main">
+      Done
     </main>
     <script src="handlebars.js"></script>
     <script src="issues.js"></script>
